welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: type YELLOW is not a member of object java.awt.Color
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                 ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
         ^MethodsPicture:21: error: type RED is not a member of object java.awt.Color
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                                         ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                                 ^MethodsPicture:21: error: type BLUE is not a member of object java.awt.Color
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                                                              ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                                                      ^MethodsPicture:21: error: type GREEN is not a member of object java.awt.Color
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                                                                                    ^MethodsPicture:21: error: not found: value c
  faireV(c:Color.YELLOW); faireV(c:Color.RED); faireV(c:Color.BLUE); faireV(c:Color.GREEN)
                                                                            ^